[gd_scene load_steps=32 format=3 uid="uid://61kjteptnn25"]

[ext_resource type="Script" path="res://scenes/screens/post_ending_scene.gd" id="1_l1hei"]
[ext_resource type="TileSet" uid="uid://kbn7x6shxee4" path="res://assets/tilesets/general.tres" id="2_vrtm7"]
[ext_resource type="Texture2D" uid="uid://bb2jwmnm7kkqk" path="res://assets/sprites/particles/heart.png" id="3_0qgy2"]
[ext_resource type="Texture2D" uid="uid://do231vau555kl" path="res://assets/sprites/characters/heroine_boyfriend_sitting.png" id="3_wvo2r"]
[ext_resource type="Texture2D" uid="uid://78tht04yc4ap" path="res://assets/sprites/utils/wine_bottle.png" id="4_l5mhi"]
[ext_resource type="Texture2D" uid="uid://bvjuowjnsxptj" path="res://assets/sprites/utils/picnic_blanket.png" id="5_tu1a6"]
[ext_resource type="Texture2D" uid="uid://bi08ydh0fq7w5" path="res://assets/sprites/utils/picnic_wine.png" id="6_2mv14"]
[ext_resource type="Texture2D" uid="uid://bqngl4dap8dw" path="res://assets/sprites/characters/heroine_sitting.png" id="7_a2i2v"]
[ext_resource type="Texture2D" uid="uid://dm7cylwek2boj" path="res://assets/sprites/utils/cake.png" id="7_vwf68"]
[ext_resource type="PackedScene" uid="uid://dpc3uv2h0ppfo" path="res://scenes/utils/falling_leaves.tscn" id="9_xejwb"]
[ext_resource type="Texture2D" uid="uid://cnynui6yu4xka" path="res://assets/sprites/characters/doggy.png" id="10_kn8ft"]
[ext_resource type="Texture2D" uid="uid://8yxjss2chffo" path="res://assets/sprites/characters/shadow.png" id="11_iuq6p"]
[ext_resource type="FontFile" uid="uid://brgc8ctbo381j" path="res://assets/fonts/teeny_tiny_pixels.ttf" id="12_yqe5p"]
[ext_resource type="PackedScene" uid="uid://0hhnmxxla0lt" path="res://scenes/utils/transitions.tscn" id="13_t0gim"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vj3qn"]
atlas = ExtResource("7_a2i2v")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_30olg"]
atlas = ExtResource("7_a2i2v")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuco2"]
atlas = ExtResource("7_a2i2v")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbmss"]
atlas = ExtResource("7_a2i2v")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_4qvlm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vj3qn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30olg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuco2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbmss")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_tqw6a"]
atlas = ExtResource("3_0qgy2")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpfx7"]
atlas = ExtResource("3_0qgy2")
region = Rect2(8, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_w3xnm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqw6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpfx7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ac8ta"]
atlas = ExtResource("3_wvo2r")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdigs"]
atlas = ExtResource("3_wvo2r")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmy1d"]
atlas = ExtResource("3_wvo2r")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j4md"]
atlas = ExtResource("3_wvo2r")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_wbri7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ac8ta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdigs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmy1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j4md")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_evx46"]
atlas = ExtResource("10_kn8ft")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0phs4"]
atlas = ExtResource("10_kn8ft")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5jnk"]
atlas = ExtResource("10_kn8ft")
region = Rect2(32, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_qb2kj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_evx46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0phs4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5jnk")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[node name="PostEndingScene" type="Node2D"]
script = ExtResource("1_l1hei")

[node name="EndingCamera" type="Camera2D" parent="."]
position = Vector2(120, 33)

[node name="Heroine" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(62, 51)
sprite_frames = SubResource("SpriteFrames_4qvlm")
autoplay = "default"
frame = 2
frame_progress = 0.712241

[node name="Heart" type="AnimatedSprite2D" parent="Heroine"]
visible = false
z_index = 4
y_sort_enabled = true
position = Vector2(-1, -12)
scale = Vector2(1.125, 1.125)
sprite_frames = SubResource("SpriteFrames_w3xnm")
autoplay = "default"

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
position = Vector2(0, 2)
tile_set = ExtResource("2_vrtm7")
format = 2
layer_0/name = "ground"
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(65536, 917504, 12, 131075, 917504, 12, 196612, 786432, 12, 327686, 720896, 12, 327687, 983040, 7, 393223, 917504, 8, 393224, 786432, 12, 65541, 1179648, 7, 65542, 720896, 12, 65543, 720896, 12, 65544, 720896, 7, 65545, 1114112, 9, 65546, 786432, 8, 65547, 851968, 8, 65549, 917504, 7, 65538, 720896, 12, 262151, 983040, 12, 262152, 720896, 8, 327688, 1114112, 10, 327689, 851968, 9, 327690, 851968, 12, 393226, 720896, 12, 393227, 851968, 12, 131072, 917504, 12, 196608, 786432, 12, 262144, 720896, 12, 327681, 983040, 12, 262145, 720896, 12, 196609, 917504, 12, 131073, 983040, 12, 262146, 983040, 12, 327682, 917504, 12, 327683, 917504, 12, 196616, 1114112, 8, 196618, 720896, 12, 196620, 983040, 7, 196621, 1179648, 10, 262155, 786432, 10, 327691, 917504, 12, 262153, 1048576, 11, 458761, 851968, 12, 458760, 720896, 12, 458759, 917504, 8, 458758, 720896, 12, 458757, 851968, 12, 458756, 720896, 12, 458755, 786432, 12, 458753, 983040, 12, 458752, 720896, 12, 393216, 720896, 12, 327680, 720896, 12, 458754, 720896, 12, 393218, 720896, 12, 393219, 786432, 12, 393217, 851968, 12, 393220, 917504, 12, 393221, 720896, 12, 327685, 720896, 12, 327684, 786432, 12, 262148, 720896, 12, 393222, 983040, 12, 393229, 983040, 12, 327692, 917504, 12, 262156, 1179648, 10, 393228, 851968, 12, 327693, 720896, 12, 262157, 720896, 12, 65537, 720896, 12, 131074, 917504, 12, 196610, 786432, 12, 196611, 851968, 12, 262147, 720896, 12, 65550, 720896, 12, 131086, 851968, 12, 196622, 720896, 12, 262158, 720896, 12, 327694, 983040, 12, 393230, 786432, 12, 0, 917504, 12, 1, 851968, 12, 2, 720896, 12, 4, 917504, 7, 5, 786432, 12, 6, 851968, 12, 7, 720896, 12, 8, 786432, 12, 9, 720896, 7, 10, 1114112, 9, 13, 720896, 12, 14, 720896, 12, -65536, 720896, 12, -65535, 720896, 12, -65534, 983040, 12, -65533, 917504, 12, -65532, 720896, 12, -65531, 720896, 12, -65530, 720896, 12, -65529, 983040, 12, -65528, 983040, 12, -65527, 720896, 12, -65524, 917504, 12, -65523, 720896, 12, -65522, 983040, 12, 393225, 851968, 12, 458762, 720896, 12, 458763, 720896, 12, 458764, 720896, 12, 458765, 720896, 12, 458766, 983040, 12, -131072, 786432, 12, -131071, 983040, 12, -131070, 786432, 12, -131069, 983040, 12, -131068, 917504, 12, -131067, 720896, 12, -131066, 720896, 12, -196601, 720896, 12, -196600, 720896, 12, -196599, 786432, 12, -196598, 720896, 12, -196597, 983040, 12, -196596, 720896, 12, -196595, 983040, 12, -131059, 720896, 12, -131058, 917504, 12, -131060, 917504, 12, -131061, 720896, 12, -131062, 917504, 12, -131065, 983040, 12, -196608, 851968, 12, -196607, 720896, 12, -196606, 983040, 12, -196605, 720896, 12, -196604, 851968, 12, -196603, 917504, 12, -196602, 720896, 12, -196594, 720896, 12, 524290, 917504, 12, 524291, 720896, 12, 524292, 786432, 12, 524293, 917504, 12, 524294, 720896, 12, 524295, 917504, 8, 524296, 983040, 12, 524297, 720896, 12, 524298, 851968, 12, 524299, 851968, 12, 524300, 786432, 12, 524301, 720896, 12, 524302, 720896, 12, -131073, 720896, 12, -65537, 786432, 12, -1, 917504, 12, 65535, 983040, 12, 131071, 720896, 12, 196607, 720896, 12, 262143, 917504, 12, 327679, 851968, 12, 393215, 917504, 12, 458751, 720896, 12, 524287, 720896, 12, 589823, 983040, 12, 524288, 851968, 12, 524289, 720896, 12, -196593, 983040, 12, -131057, 720896, 12, -65521, 720896, 12, 15, 720896, 12, 65551, 720896, 12, 131087, 720896, 12, 196623, 720896, 12, 393231, 720896, 12, 458767, 786432, 12, 524303, 851968, 12, 327695, 917504, 12, 262159, 786432, 12, 655359, 851968, 12, 589824, 851968, 12, 589825, 720896, 12, 589826, 786432, 12, 589827, 720896, 12, 589828, 720896, 12, 589829, 983040, 12, 589830, 720896, 12, 589831, 917504, 9, 589832, 786432, 12, 589833, 786432, 12, 589834, 720896, 12, 589835, 720896, 12, 589836, 917504, 12, 589837, 720896, 12, 589838, 720896, 12, 589839, 720896, 12, 589840, 720896, 12, -131056, 720896, 12, -196592, 983040, 12, -65520, 851968, 12, 16, 720896, 12, 65552, 786432, 12, 131088, 917504, 12, 196624, 917504, 12, 262160, 851968, 12, 327696, 983040, 12, 393232, 917504, 12, 458768, 720896, 12, 524304, 917504, 12, 131081, 1048576, 8, 131082, 786432, 9, 131083, 851968, 9, 131084, 917504, 12, 131085, 917504, 8, 131080, 1114112, 9, 131078, 786432, 10, 131079, 1114112, 7, -196591, 720896, 12, -131055, 786432, 12, -65519, 720896, 12, 17, 917504, 12, 65553, 851968, 12, 131089, 786432, 12, 196625, 983040, 12, 262161, 983040, 12, 327697, 851968, 12, 393233, 720896, 12, 458769, 720896, 12, 524305, 917504, 12, 589841, 983040, 12, -131064, 720896, 12, -131063, 917504, 12, 11, 851968, 8, 65548, 720896, 12, 12, 917504, 12, 262154, 786432, 10, 196617, 851968, 8, 196619, 983040, 12, 196615, 720896, 9, -65525, 851968, 7, -65526, 720896, 7, 3, 720896, 12, 65539, 720896, 12, 65540, 983040, 10, 131076, 720896, 12, 131077, 983040, 10, 196613, 720896, 12, 262149, 851968, 12, 262150, 720896, 12, 196614, 917504, 12)
layer_1/name = "foliage"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(196618, 65537, 11, 196619, 327684, 2, 65542, 65537, 11, 65543, 65537, 11, 393224, 65537, 11, 327686, 65537, 11, 262151, 1, 11, 65539, 1, 11, 196622, 1, 11, -131059, 327684, 2, 262148, 131076, 2, 65538, 65540, 2, 262150, 4, 2, -65529, 65540, 2)
layer_2/name = "trees"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = true
layer_2/y_sort_origin = 0
layer_2/z_index = 1
layer_2/tile_data = PackedInt32Array(-196598, 393217, 8, -196597, 393217, 8, -196596, 393217, 8, -196595, 393217, 8, -196599, 393217, 8, -262135, 393217, 8, -262136, 393217, 8, -262137, 393217, 8, -262138, 393217, 8, -262139, 393217, 8, -262140, 393217, 8, -196604, 393217, 8, -196603, 393217, 8, -196602, 393217, 8, -196601, 393217, 8, -196600, 393217, 8, -196605, 393217, 8, -262141, 393217, 8, -262142, 393217, 8, -262143, 393217, 8, -262144, 393217, 8, -196608, 393217, 8, -196606, 393217, 8, -131073, 393217, 8, -65537, 393217, 8, -1, 393217, 8, 65534, 393217, 8, 65535, 393217, 8, 131070, 393217, 8, 196606, 393217, 8, 262142, 393217, 8, 327678, 393217, 8, 327679, 393217, 8, 393215, 393217, 8, 131071, 393217, 8, 196607, 393217, 8, 262143, 393217, 8, 393216, 393217, 8, 458753, 393217, 8, 524290, 393217, 8, 524289, 393217, 8, 458752, 393217, 8, 458751, 393217, 8, 393214, 393217, 8, 458750, 393217, 8, 524287, 393217, 8, 524288, 393217, 8, 524286, 393217, 8, 458749, 393217, 8, 589822, 393217, 8, -3, 393217, 8, -2, 393217, 8, -65538, 393217, 8, 196605, 393217, 8, 262141, 393217, 8, 327677, 393217, 8, 131069, 393217, 8, 65533, 393217, 8, 393213, 393217, 8, 589823, 393217, 8, 589825, 393217, 8, 589826, 393217, 8, 589827, 393217, 8, 589828, 393217, 8, 589829, 393217, 8, 524291, 393217, 8, 589832, 393217, 8, 589833, 393217, 8, 589834, 393217, 8, 589835, 393217, 8, 524299, 393217, 8, 524298, 393217, 8, 524300, 393217, 8, 524301, 393217, 8, 524302, 393217, 8, 589837, 393217, 8, 589838, 393217, 8, 589839, 393217, 8, 524303, 393217, 8, 524304, 393217, 8, 458767, 393217, 8, 589836, 393217, 8, 458766, 393217, 8, 393232, 393217, 8, 327696, 393217, 8, 393231, 393217, 8, 327697, 393217, 8, 262161, 393217, 8, 196625, 393217, 8, 131089, 393217, 8, 131088, 393217, 8, 65552, 393217, 8, 16, 393217, 8, 196624, 393217, 8, 262159, 393217, 8, 196623, 393217, 8, 131087, 393217, 8, 65551, 393217, 8, 15, 393217, 8, -196593, 393217, 8, -262130, 393217, 8, -262131, 393217, 8, -262132, 393217, 8, -262133, 393217, 8, -65520, 393217, 8, -131056, 393217, 8, -196592, 393217, 8, 17, 393217, 8, 65553, 393217, 8, 262160, 393217, 8, -262134, 393217, 8, -262129, 393217, 8, -262128, 393217, 8, -196591, 393217, 8, 589824, 393217, 8, 393233, 393217, 8, 458769, 393217, 8, 524305, 393217, 8, 589841, 393217, 8, 327695, 393217, 8, 458765, 393217, 8, 393230, 393217, 8, -196594, 393217, 8, -131058, 393217, 8, -131057, 393217, 8, -65521, 393217, 8, -131072, 393217, 8, -196607, 393217, 8, 655359, 393217, 8, 524285, 393217, 8, 655358, 393217, 8, 655357, 393217, 8, 589821, 393217, 8, 589840, 393217, 8, 458768, 393217, 8, 524292, 393217, 8, 524297, 393217, 8, 524296, 393217, 8, 524293, 393217, 8, 458756, 393217, 8, 458761, 393217, 8, 458762, 393217, 8, 458763, 393217, 8, 458764, 393217, 8, 458755, 393217, 8, 458754, 393217, 8, 393226, 393217, 8, 393227, 393217, 8, 393228, 393217, 8, 393229, 393217, 8, 393219, 393217, 8, 393218, 393217, 8, 393217, 393217, 8, 327681, 393217, 8, 327680, 393217, 8, 327693, 393217, 8, 327694, 393217, 8, -131055, 393217, 8, -65519, 393217, 8, -65539, 393217, 8, -131074, 393217, 8, -131075, 393217, 8, -196610, 393217, 8, -196609, 393217, 8, -196611, 393217, 8, -262127, 393217, 8, -262147, 393217, 8, -262146, 393217, 8, -262145, 393217, 8, -327680, 393217, 8, -327679, 393217, 8, -327678, 393217, 8, -327677, 393217, 8, -327676, 393217, 8, -327675, 393217, 8, -327674, 393217, 8, -327673, 393217, 8, -327672, 393217, 8, -327671, 393217, 8, -327670, 393217, 8, -327669, 393217, 8, -327668, 393217, 8, -327667, 393217, 8, -327666, 393217, 8, -327665, 393217, 8, -327664, 393217, 8, -327663, 393217, 8, -262126, 393217, 8, -131054, 393217, 8, -65518, 393217, 8, 18, 393217, 8, -196590, 393217, 8, -327662, 393217, 8, 65554, 393217, 8, 131090, 393217, 8, 196626, 393217, 8, 262162, 393217, 8, 327698, 393217, 8, 393234, 393217, 8, 458770, 393217, 8, 524306, 393217, 8, 589842, 393217, 8, -262148, 393217, 8, -196612, 393217, 8, -131076, 393217, 8, -65540, 393217, 8, -4, 393217, 8, 65532, 393217, 8, 131068, 393217, 8, 196604, 393217, 8, 262140, 393217, 8, 655356, 393217, 8, 589820, 393217, 8, 524284, 393217, 8, 458748, 393217, 8, 393212, 393217, 8, 327676, 393217, 8, -262149, 393217, 8, -196613, 393217, 8, -131077, 393217, 8, 196603, 393217, 8, 262139, 393217, 8, 327675, 393217, 8, 393211, 393217, 8, 458747, 393217, 8, 524283, 393217, 8, 589819, 393217, 8, 655355, 393217, 8, 131067, 393217, 8, 65531, 393217, 8, -5, 393217, 8, -65541, 393217, 8, -262150, 393217, 8, -196614, 393217, 8, -131078, 393217, 8, 393210, 393217, 8, 458746, 393217, 8, 524282, 393217, 8, 589818, 393217, 8, 655354, 393217, 8, 327674, 393217, 8, 262138, 393217, 8, 196602, 393217, 8, 131066, 393217, 8, 65529, 393217, 8, -7, 393217, 8, -6, 393217, 8, -65542, 393217, 8, -131079, 393217, 8, -196615, 393217, 8, 65530, 393217, 8, 393209, 393217, 8, 458745, 393217, 8, 524281, 393217, 8, 589817, 393217, 8, 655353, 393217, 8, 327673, 393217, 8, 262137, 393217, 8, 196601, 393217, 8, 131065, 393217, 8, -65543, 393217, 8, -262151, 393217, 8)
layer_3/name = "house"
layer_3/enabled = true
layer_3/modulate = Color(1, 1, 1, 1)
layer_3/y_sort_enabled = false
layer_3/y_sort_origin = 0
layer_3/z_index = 0
layer_3/tile_data = PackedInt32Array(-65528, 1638403, 9, 8, 1638403, 12, 65544, 1638403, 13, -65527, 1703939, 9, 9, 1703939, 12, 65545, 1703939, 13, -65526, 1769475, 9, 10, 1769475, 12, 65546, 1769475, 13, -65525, 1835011, 9, 11, 1835011, 12, 65547, 1835011, 13, 131083, 131078, 4, 131084, 196614, 4, 65543, 786438, 0, 393222, 6, 2, 13, 393222, 2, -65524, 262150, 4, -65523, 327686, 4, -65533, 720902, 3, -65530, 851974, 3, -65532, 917510, 3, -65531, 983046, 3, -131069, 720902, 3, -131066, 851974, 3, -131068, 983046, 3, -131067, 786438, 3, -65534, 1179651, 15)
layer_4/name = "visual finishes"
layer_4/enabled = true
layer_4/modulate = Color(1, 1, 1, 1)
layer_4/y_sort_enabled = false
layer_4/y_sort_origin = 0
layer_4/z_index = 3
layer_4/tile_data = PackedInt32Array(-196597, 1835011, 7, -196600, 1638403, 7, -131064, 1638403, 8, -196599, 1703939, 7, -131063, 1703939, 8, -196598, 1769475, 7, -131062, 1769475, 8, -131061, 1835011, 8, 65547, 131078, 3, 65548, 196614, 3, -131060, 262150, 3, -131059, 327686, 3, -131069, 720902, 2, -131066, 851974, 2, -196602, 851974, 2, -196605, 720902, 2, -196603, 786438, 2, -131068, 917510, 2, -131067, 983046, 2, -196604, 983046, 2, -131070, 1179651, 14)

[node name="HeroineBoyfriend" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(98, 51)
sprite_frames = SubResource("SpriteFrames_wbri7")
autoplay = "default"
frame = 1
frame_progress = 0.635402
flip_h = true

[node name="Heart" type="AnimatedSprite2D" parent="HeroineBoyfriend"]
visible = false
z_index = 4
y_sort_enabled = true
position = Vector2(-1, -12)
scale = Vector2(1.125, 1.125)
sprite_frames = SubResource("SpriteFrames_w3xnm")
autoplay = "default"

[node name="WineBottle" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(77, 40)
texture = ExtResource("4_l5mhi")

[node name="PicnicBlanket" type="Sprite2D" parent="."]
position = Vector2(80, 51)
texture = ExtResource("5_tu1a6")

[node name="GlassOfWine" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(70, 59)
texture = ExtResource("6_2mv14")

[node name="GlassOfWine2" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(91, 59)
texture = ExtResource("6_2mv14")

[node name="Cake" type="Sprite2D" parent="."]
position = Vector2(81, 53)
texture = ExtResource("7_vwf68")

[node name="FallingLeaves" parent="." instance=ExtResource("9_xejwb")]
z_index = 12
position = Vector2(27, 9)

[node name="FallingLeaves2" parent="." instance=ExtResource("9_xejwb")]
z_index = 12
position = Vector2(186, -17)

[node name="Doggy" type="AnimatedSprite2D" parent="."]
position = Vector2(126, 39)
sprite_frames = SubResource("SpriteFrames_qb2kj")
autoplay = "default"
frame_progress = 0.266581

[node name="Sprite2D" type="Sprite2D" parent="Doggy"]
show_behind_parent = true
position = Vector2(-1, 4)
texture = ExtResource("11_iuq6p")

[node name="Heart" type="AnimatedSprite2D" parent="Doggy"]
visible = false
z_index = 4
y_sort_enabled = true
position = Vector2(-1, -12)
scale = Vector2(1.125, 1.125)
sprite_frames = SubResource("SpriteFrames_w3xnm")
autoplay = "default"

[node name="StartCamera" type="Camera2D" parent="."]
position = Vector2(160, -24)

[node name="TheEnd" type="Label" parent="."]
offset_left = 51.0
offset_top = 20.0
offset_right = 107.0
offset_bottom = 43.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("12_yqe5p")
theme_override_font_sizes/font_size = 10
text = "The End"

[node name="ZoomCamera" type="Camera2D" parent="."]
position = Vector2(81, 51)
zoom = Vector2(1.8, 1.8)

[node name="Transitions" parent="." instance=ExtResource("13_t0gim")]

[node name="ExitToTittleScreenTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="ExitToTittleScreenTimer" to="." method="_on_exit_to_tittle_screen_timer_timeout"]
